<resources>
    <string name="app_name">PlayOver</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email or Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in_guest_interjection">Or&#8230;</string>
    <string name="action_sign_in_guest">Sign in as Guest</string>
    <string name="action_sign_up">Sign up!</string>

    <string name="action_sign_in_provider">Sign in as Provider</string>
    <string name="action_forgot_password">Forgot Email/Password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcomeTitle">Welcome to PlayOver!</string>
    <string name="welcomeSubtitle">The best solution to your layover</string>

    <string name="logo_c_description">Main logo for the app</string>
    <string name="title_activity_login_provider">Provider Portal</string>

    <string name="login_provider_welcome">Provider Portal</string>

    <string name="action_submit_email">Submit Email</string>

    <string name="action_add_activity">Add Activity</string>
    <string name="prompt_activity_name">Activity Name</string>
    <string name="prompt_activity_cost">Activity Cost</string>
    <string name="prompt_activity_schedule">Activity Schedule</string>
    <string name="prompt_activity_description">Activity Description</string>

    <string name="action_change_information">Change Information</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_contact_info">Contact Information</string>
    <string name="prompt_provider_schedule">Provider Schedule</string>
    <string name="prompt_provider_description">Provider Description</string>

    <string name="signup_provider">Signup Provider</string>

    <string name="signup_choose">Select</string>
    <string name="signup_user">User</string>

    <string name="action_settings">Setting</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>



    <string name="airport_promt_string">Please choose an airport</string>
    <string-array name="Airport_array">
        <item>Atlanta, GA</item>
        <item>Birmingham, AL</item>
        <item>St. Louis, MO</item>
        <item>New York, NY</item>
        <item>Chicago, IL</item>
    </string-array>
    <string name="airport_promt_2_string">Now Let the Good Times Roll!</string>
    <string name="airport_search_string">Search for Activities</string>
    <string name="airport_name_string">Airport Name</string>

    <string name="activity_name">Activity Name</string>
    <string name="activity_provider_name">Provider</string>
    <string name="activity_cost">$100.00</string>
    <string name="title_activity_provider_page">ProviderPageActivity</string>


    <string name="ratings_prompt">Select a Star Rating</string>
    <string-array name="ratings_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string name="sorting_promptt">Select a Sort Method</string>
    <string-array name="sorting_array">
        <item>Sort by Relevance</item>
        <item>Sort by Cost Greatest to Least</item>
        <item>Sort by Cost Least to Greatest</item>
        <item>Sort by Duration Greatest to Least</item>
        <item>Sort by Duration Least to Greatest</item>
        <item>Sort by Rating Greatest to Least</item>
        <item>Sort by Rating Least to Greatest</item>
    </string-array>

    <string-array name="time_array">
        <item >12 AM</item>
        <item>Birmingham, AL</item>
        <item>St. Louis, MO</item>
        <item>New York, NY</item>
        <item>Chicago, IL</item>
    </string-array>
</resources>
