<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.steubercreative.www.playover.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logo_c_description"
                android:src="@drawable/logo" />


            <TextView
                android:id="@+id/WelcomeTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:lineSpacingExtra="5sp"
                android:text="@string/welcomeTitle"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/WelcomeSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeSubtitle"
                android:textAlignment="center"
                android:textStyle="italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="12dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/prompt_password"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_in_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_guest_interjection"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/email_sign_in_guest_button"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="@string/action_sign_in_guest"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_in_provider_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in_provider"
                android:layout_marginTop="10dp"
                android:textColor="@color/colorLink"/>

            <TextView
                android:id="@+id/forgot_password_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_forgot_password"
                android:textColor="@color/colorLink"/>

            <TextView
                android:id="@+id/sign_up_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:textColor="@color/colorLink"
                android:layout_marginTop="10dp"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="96dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
