<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.steubercreative.www.playover.AddActivityActivity"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_c_description"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add_activity"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="20dp"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_activity_name"
            android:inputType="textNoSuggestions" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_activity_cost"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_schedule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_activity_schedule"
            android:inputType="text|number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/activity_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_activity_descrption" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/action_submit_email"
        android:textColor="@color/colorAccent" />

</LinearLayout>
